--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -4,18 +4,16 @@
             <!-- description -->
             <div class="yui3-u-1-2 section">
                 <div class="yui3-u-c">
-                    <div class="column">
-                        <div class="inner">
-                            <div class="description">{{description}}&nbsp;<span class="widget-arrow"></span></div>
-                        </div>
-                    </div>
+                    <div class="description">{{description}}&nbsp;<span class="widget-arrow"></span></div>
+
+                    <p class="more">{{more}}</p>
                 </div>
             </div>
 
             <!-- diagram -->
             <div class="yui3-u-1-2 section">
                 <div class="yui3-u-c">
-                    <div class="column diagram-container">
+                    <div class="diagram-container">
                         <div class="inner">
                             <img class="diagram" src="images/test/{{type}}/{{diagramFilename}}" />
                         </div>
