--- a/js/template/subtest/TypesOfCell2.html
+++ b/js/template/subtest/TypesOfCell2.html
@@ -5,10 +5,10 @@
             <div class="yui3-u-c fighter">
                 <div class="title">Infection Fighters</div>
 
-                <div class="diagram">
+                <div class="diagram big">
                     <img class="icon" src="images/subtest/types-of-cell2/{{species}}-fighter-2x.png" alt="" />
 
-                    <img class="circle big" src="images/subtest/types-of-cell2/{{species}}-circle-big-2x.png" alt="" />
+                    <img class="circle" src="images/subtest/types-of-cell2/{{species}}-circle-big-2x.png" alt="" />
 
                     <div class="percentage">
                         <span class="number">{{mathRound fighter.percentage}}</span>
@@ -37,10 +37,10 @@
             <div class="yui3-u-c defender">
                 <div class="title">Immune Defenders</div>
 
-                <div class="diagram">
+                <div class="diagram medium">
                     <img class="icon" src="images/subtest/types-of-cell2/{{species}}-defender-2x.png" alt="" />
 
-                    <img class="circle medium" src="images/subtest/types-of-cell2/{{species}}-circle-medium-2x.png" alt="" />
+                    <img class="circle" src="images/subtest/types-of-cell2/{{species}}-circle-medium-2x.png" alt="" />
 
                     <div class="percentage">
                         <span class="number">{{mathRound defender.percentage}}</span>
@@ -69,10 +69,10 @@
             <div class="yui3-u-c watcher">
                 <div class="title">Allergen Watchmen</div>
 
-                <div class="diagram">
+                <div class="diagram small">
                     <img class="icon" src="images/subtest/types-of-cell2/{{species}}-watcher-2x.png" alt="" />
 
-                    <img class="circle small" src="images/subtest/types-of-cell2/{{species}}-circle-small-2x.png" alt="" />
+                    <img class="circle" src="images/subtest/types-of-cell2/{{species}}-circle-small-2x.png" alt="" />
 
                     <div class="percentage">
                         <span class="number">{{mathRound watcher.percentage}}</span><span class="symbol">%</span>
