--- a/css-sass/_common.scss
+++ b/css-sass/_common.scss
@@ -20,6 +20,13 @@ $pageSectionPaddingLeft: 15px;
     background-image: url("../images/common/diamonds.png");
     background-repeat: no-repeat;
     background-position: center 10px;
+
+    @media 
+    only screen and (-webkit-min-device-pixel-ratio: 2), 
+    only screen and (min-resolution: 192dpi) {
+        background-image: url("../images/common/diamonds-2x.png");
+        background-size: image-width("../images/common/diamonds-2x.png") / 2;
+    }
 }
 
 .caption {
