modal/tooltip: updated style https://app.asana.com/0/7908989541876/7906899007921

--- a/css-sass/_common.scss
+++ b/css-sass/_common.scss
@@ -87,7 +87,8 @@ $widgetIndicatorWidth: 32px;
 .message-tooltip {
     .message {
         font-weight: bold;
-        font-size: 116%;
+        display: block;
+        margin-bottom: 8px;
     }
 }
 
