--- a/js/template/subtest/Range.html
+++ b/js/template/subtest/Range.html
@@ -33,7 +33,7 @@
     <div class="description">
         <p>
             {{#if message}}
-                <span class="message">{{message}}</span><br />
+                <span class="message">{{message}}</span>
             {{/if}}
 
             {{description}}
