--- a/js/template/subtest/TypesOfCell2.html
+++ b/js/template/subtest/TypesOfCell2.html
@@ -26,7 +26,7 @@
                 <div class="description">
                     <p>
                         {{#if fighter.message}}
-                            <span class="message">{{fighter.message}}</span><br />
+                            <span class="message">{{fighter.message}}</span>
                         {{/if}}
 
                         {{fighter.description}}
@@ -60,7 +60,7 @@
                 <div class="description">
                     <p>
                         {{#if defender.message}}
-                            <span class="message">{{defender.message}}</span><br />
+                            <span class="message">{{defender.message}}</span>
                         {{/if}}
 
                         {{defender.description}}
@@ -93,7 +93,7 @@
                 <div class="description">
                     <p>
                         {{#if watcher.message}}
-                            <span class="message">{{watcher.message}}</span><br />
+                            <span class="message">{{watcher.message}}</span>
                         {{/if}}
 
                         {{watcher.description}}
