--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -40,7 +40,7 @@
                                         {{else}}
                                             {{patient.name}}’s urine was an expected color.
                                         {{/if}}
-                                    </span><br />
+                                    </span>
 
                                     {{#if ph.isBad}}
                                         Many factors can affect the color of urine, from medication to diet.
@@ -91,7 +91,7 @@
                                     {{else}}
                                         {{patient.name}}’s urine’s appearance was expected.
                                     {{/if}}
-                                </span><br />
+                                </span>
 
                                 {{#if ph.isBad}}
                                     Urine is typically a clear liquid. An unexpected appearance would be caused by microscopic particles, such as cells or crystals.
@@ -163,7 +163,7 @@
                                         {{else}}
                                             The pH level of {{patient.name}}’s urine was expected.
                                         {{/if}}
-                                    </span><br />
+                                    </span>
 
                                     {{#if ph.isBad}}
                                         Blood should always be at a specific pH level, which is neutral (5.5-7.0). The kidneys are responsible for maintaining {{patient.name}}’s pH level.
