--- a/js/template/test/urineanalysis/MicroscopicParticle.html
+++ b/js/template/test/urineanalysis/MicroscopicParticle.html
@@ -32,7 +32,7 @@
                             <p>
                                 <span class="message">
                                     No microscopic particles were found in {{patient.name}}’s urine.
-                                </span><br />
+                                </span>
 
                                 This means {{patient.name}}’s organs are functioning as expected.
                             </p>
