--- a/js/template/subtest/Boolean.html
+++ b/js/template/subtest/Boolean.html
@@ -28,7 +28,7 @@
     <div class="description">
         <p>
             {{#if message}}
-                <span class="message">{{message}}</span><br />
+                <span class="message">{{message}}</span>
             {{/if}}
 
             {{description}}
