--- a/js/template/subtest/Select.html
+++ b/js/template/subtest/Select.html
@@ -11,7 +11,7 @@
     <div class="description">
         <p>
             {{#if message}}
-                <span class="message">{{message}}</span><br />
+                <span class="message">{{message}}</span>
             {{/if}}
 
             {{description}}
