--- a/js/template/subtest/pod/Color.html
+++ b/js/template/subtest/pod/Color.html
@@ -8,7 +8,7 @@
     <div class="description">
         <p>
             {{#if message}}
-                <span class="message">{{message}}</span><br />
+                <span class="message">{{message}}</span>
             {{/if}}
 
             {{description}}
