cbc - fixed padding https://app.asana.com/0/7908989541876/7932249292563

--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -93,11 +93,11 @@
 	</div>
 	
 	<!-- Platelets -->
-	<div class="page-section subsection subsection-platelet test-section">
+	<div class="subsection subsection-platelet test-section">
 		<div class="test-section-inner-with-icon first">
 			<div class="yui3-g-r">
 				<!-- description -->
-				<div class="yui3-u-19-24">
+				<div class="yui3-u-19-24 yui3-u-23-24-small-tablet">
 					<div class="yui3-u-c">
 						<div class="test-section-description">
 							<img class="icon" src="images/test/cbc/diagram/platelet-2x.png" alt="" />
