--- a/js/template/Overview.html
+++ b/js/template/Overview.html
@@ -121,9 +121,9 @@
 			</div>
 		</div>
 
-		<div class="arrow">
+		<div class="widget-circle-arrow">
 			<img src="images/overview/recap/circle.png" alt="" />
-			<img src="images/overview/recap/arrow.png" alt="get started" />
+			<img src="images/overview/recap/arrow-down.png" alt="get started" />
 		</div>
 	</div>
 
