--- a/js/template/Page.html
+++ b/js/template/Page.html
@@ -26,11 +26,11 @@
     </div>
 
     <div class="page-section-wrapper page-section-conclusion">
-        <div class="yui3-g-r page-section">
+        <div class="yui3-g-r">
             <div class="yui3-u-1-12 yui3-hidden-phone"></div>
             <div class="yui3-u-5-6">
                 <div class="yui3-u-c">
-                    <div class="arrow">
+                    <div class="widget-circle-arrow">
                         <img src="images/overview/recap/circle.png" alt="" />
                         <img src="images/overview/recap/arrow-up.png" alt="" />
                     </div>
