Updated range colors. https://app.asana.com/0/7908989541876/7906899008011

--- a/css-sass/view/subtest/_range.scss
+++ b/css-sass/view/subtest/_range.scss
@@ -88,7 +88,7 @@
             height: 100%;
             border-top-left-radius: 3px;
             border-bottom-left-radius: 3px;
-            background-color: #8bd0eb;
+            background-color: #00b8d6;
         }
 
         .expected-value {
