--- a/css/screen.css
+++ b/css/screen.css
@@ -3590,7 +3590,7 @@ span.placeholder {
   height: 100%;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
-  background-color: #8bd0eb;
+  background-color: #00b8d6;
 }
 .view-subtest-range .actual .expected-value {
   height: 100%;
