--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -78,7 +78,7 @@
                                 <div class="value"></div>
                             </div>
 
-                            <div class="label">
+                            <div class="expected-label">
                                 Expected Range
                             </div>
                         </div>
