--- a/css/screen.css
+++ b/css/screen.css
@@ -3919,33 +3919,33 @@ span.placeholder {
 .view-subtest-select .options {
   padding: 0;
   margin: 0;
+  position: relative;
+}
+.view-subtest-select .indicator-background {
+  position: absolute;
+  width: 41px;
+  top: 0;
+  bottom: 0;
+  border-radius: 21px;
+  box-shadow: inset 0 0 10px #e5e5e5;
+  border: 1px solid #e5e5e5;
 }
 .view-subtest-select .option {
   font-family: 'Apercu', sans-serif;
   font-size: 116%;
   list-style: none;
   color: #6b6b6b;
-  background-image: url(../images/subtest/select/bg-middle.png);
-  background-repeat: repeat-y;
   position: relative;
 }
 .view-subtest-select .option .widget-indicator {
   position: absolute;
   top: 4px;
-  left: 7px;
+  left: 6px;
   display: none;
   cursor: pointer;
 }
-.view-subtest-select .option:first-child {
-  background-image: url(../images/subtest/select/bg-top.png);
-  background-position: left top;
-}
 .view-subtest-select .option:first-child .widget-indicator {
   top: 5px;
-}
-.view-subtest-select .option.last {
-  background-image: url(../images/subtest/select/bg-bottom.png);
-  background-position: left bottom;
 }
 .view-subtest-select .option.last .widget-indicator {
   top: 2px;
