--- a/js/template/subtest/Select.html
+++ b/js/template/subtest/Select.html
@@ -1,12 +1,14 @@
 <div class="view-subtest-select">
-	<ul class="options">
+	<div class="options">
 		{{#each options}}
-			<li class="option">
+			<div class="option">
                 <div class="widget-indicator"></div>
 				<div class="name">{{.}}</div>
-			</li>
+			</div>
 		{{/each}}
-	</ul>
+
+        <div class="indicator-background"></div>
+	</div>
 
     <div class="description">
         <p>
