--- a/css-sass/view/subtest/pod/_select.scss
+++ b/css-sass/view/subtest/pod/_select.scss
@@ -1,4 +1,17 @@
+@mixin subtestPodSelectSmall {
+    margin-left: 5px;
+}
+
 .view-subtest-pod-select {
 	margin-top: 10px;
 	margin-left: 10px;
+    
+    /* phone */
+    @media (max-width:($mq-phone)) {
+        @include subtestPodSelectSmall;
+    }
+}
+
+.view-subtest-pod-base.small .view-subtest-pod-select {
+    @include subtestPodSelectSmall;
 }
