--- a/js/template/subtest/pod/Base.html
+++ b/js/template/subtest/pod/Base.html
@@ -1,4 +1,4 @@
-<div class="view-subtest-pod-base">
+<div class="view-subtest-pod-base {{classes}}">
 	<div class="inner">
 		<div class="title">{{title}}</div>
 		<div class="content"></div>
