--- a/css-sass/view/subtest/pod/_base.scss
+++ b/css-sass/view/subtest/pod/_base.scss
@@ -1,12 +1,14 @@
 .view-subtest-pod-base {
 	@include secondaryFont;
+	max-width: 235px;
+    margin: 0 auto;
 	
 	>.inner {
 		background-color: #fcfcfb;
 		border: 1px solid #a3a3a3;
 		border-radius: 4px;
 
-		padding: 15px 25px;
+		padding: 15px 15px;
 	}
 
 	.title {
@@ -17,4 +19,25 @@
 		padding-bottom: 10px;
 		border-bottom: 1px solid #6b6b6b;
 	}
+
+    @mixin small {
+        max-width: 200px;
+        
+		>.inner {
+			padding: 10px 5px;
+		}
+
+		.title {
+			padding-bottom: 5px;
+		}
+    }
+
+    &.small {
+        @include small;
+    }
+
+    /* phone */
+    @media (max-width:($mq-phone)) {
+        @include small;
+    }
 }
