subtest/select: clip overflowing option text

--- a/css/screen.css
+++ b/css/screen.css
@@ -3990,6 +3990,8 @@ span.placeholder {
     padding-left: 52px;
     height: 30px;
     line-height: 30px;
+    overflow: hidden;
+    text-overflow: clip;
   }
   .view-subtest-select .option:first-child .widget-indicator {
     top: 0;
@@ -4019,6 +4021,8 @@ span.placeholder {
   padding-left: 52px;
   height: 30px;
   line-height: 30px;
+  overflow: hidden;
+  text-overflow: clip;
 }
 .view-subtest-pod-base.small .view-subtest-select .option:first-child .widget-indicator {
   top: 0;
