--- a/css-sass/view/subtest/_select.scss
+++ b/css-sass/view/subtest/_select.scss
@@ -15,6 +15,9 @@
             padding-left: $widgetIndicatorWidth + 20px;
             height: 30px;
             line-height: 30px;
+
+            overflow: hidden;
+            text-overflow: clip;
         }
     
         &:first-child {
