--- a/css/screen.css
+++ b/css/screen.css
@@ -3356,17 +3356,18 @@ span.placeholder {
 .view-test-urine-analysis .diagram-palette {
   font-family: 'Apercu', sans-serif;
   position: relative;
-  margin: 10px 0;
+  margin: 10px auto;
+  max-width: 350px;
 }
 .view-test-urine-analysis .diagram-palette .palette {
   display: block;
 }
 .view-test-urine-analysis .diagram-palette .label {
   position: absolute;
-  bottom: 53%;
+  bottom: 52%;
   left: 50%;
-  width: 150px;
-  margin: 0 0 -20% -75px;
+  width: 46%;
+  margin: 0 0 -20% -23%;
   text-align: center;
   font-size: 182%;
   font-weight: bold;
@@ -3381,6 +3382,10 @@ span.placeholder {
 }
 .view-test-urine-analysis .property.appearance {
   font-family: 'Apercu', sans-serif;
+}
+.view-test-urine-analysis .property.appearance .container {
+  max-width: 340px;
+  margin: 0 auto;
 }
 .view-test-urine-analysis .property.appearance .text {
   margin-top: 26%;
@@ -3401,10 +3406,6 @@ span.placeholder {
   vertical-align: middle;
   display: inline-block;
   padding-left: 10px;
-}
-.view-test-urine-analysis .property.appearance .expected,
-.view-test-urine-analysis .property.appearance .actual {
-  max-width: 340px;
 }
 .view-test-urine-analysis .property.appearance .actual {
   margin: 30px 0 10px;
